// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, on files selected 1`] = `
<div
  className="MessagesOrFilesSelector"
>
  <div
    className="buttons-container"
  >
    <button
      className="tab messages-tab"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Messages"
        id="search_bar.messages_tab"
      />
      <span
        className="counter"
      >
        5
      </span>
    </button>
    <button
      className="active tab files-tab"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Files"
        id="search_bar.files_tab"
      />
      <span
        className="counter"
      >
        10
      </span>
    </button>
  </div>
  <FilesFilterMenu
    onFilter={[MockFunction]}
    selectedFilter="code"
  />
</div>
`;

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, on messages selected 1`] = `
<div
  className="MessagesOrFilesSelector"
>
  <div
    className="buttons-container"
  >
    <button
      className="active tab messages-tab"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Messages"
        id="search_bar.messages_tab"
      />
      <span
        className="counter"
      >
        5
      </span>
    </button>
    <button
      className="tab files-tab"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Files"
        id="search_bar.files_tab"
      />
      <span
        className="counter"
      >
        10
      </span>
    </button>
  </div>
</div>
`;

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, without files tab 1`] = `
<div
  className="MessagesOrFilesSelector"
>
  <div
    className="buttons-container"
  >
    <button
      className="tab messages-tab"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <MemoizedFormattedMessage
        defaultMessage="Messages"
        id="search_bar.messages_tab"
      />
      <span
        className="counter"
      >
        5
      </span>
    </button>
  </div>
  <FilesFilterMenu
    onFilter={[MockFunction]}
    selectedFilter="code"
  />
</div>
`;
